Added text with selection of other parameters to test

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -125,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.chdir(str(Path.home() / \"code\" / \"TeslaMax\"))"
@@ -291,7 +295,11 @@
    "source": [
     "Notice how the results are sensitive to the magnitude of the field. It is more advantangeous to keep the field at 1.4 T during  30% of the cycle than keeping the field at 1.2 T for the entire cycle.\n",
     "\n",
-    "Our current estimative for the cooling capacity for the wine cooler is 180 W @ 0 K and 100 W @ 25 K. From the above figures, we can see that, for $\\Phi = 0.4$ and $F\\ped{B} = 0.7$, it is possible to achieve $\\cop > 2$ when the field is at 1.3 T for 35% of the time, and the cooling capacity at 20 K will be of ca. 170 W."
+    "Our current estimative for the cooling capacity for the wine cooler is 180 W @ 0 K and 100 W @ 25 K, with the highest possible COP. Since our simulations were made for a span of 20 K, let us define a virtual operating condition of 170 W @ 20 K, with COP > 1.5. From the above figure, we can select three pairs of $(B\\ped{max}, F\\ped{M})$:\n",
+    "\n",
+    "1. 1.275 T for 45% of the time\n",
+    "2. 1.300 T for 35% of the time\n",
+    "3. 1.400 T for 25% of the time"
    ]
   },
   {
