Added note about need for larger magnet on the corresponding simulation

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -562,6 +562,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this level of field we have to use a larger magnet (180 mm))."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
