Modified TeslaMax notebook text to use new function definition

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -370,7 +370,7 @@
     "We consider that the magnetic profile is a good representation of what the regenerators experience, and it is what is used as an input to AMR models. Therefore, the optimization procedure that is developed here is denoted *profile matching*: we calculate the optimal remanence angles for each magnet segments, such that the deviation between the resulting profile and a *target* ramp profile is minimized:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\mathcal{K}(\\nvector{x}) = \\left(\\int_0^{2\\pi}\\left(\\average{B}(\\phi,\\nvector{x}) - \\average{B}\\ped{ramp} (\\phi,B\\ped{l},B\\ped{h},F\\ped{M})\\right)^{2}\\diffd{\\phi}\\right)\n",
+    "\\mathcal{K}(\\nvector{x}) = \\frac{1}{2\\pi}\\left(\\int_0^{2\\pi}\\left(\\average{B}(\\phi,\\nvector{x}) - \\average{B}\\ped{ramp} (\\phi,B\\ped{l},B\\ped{h},F\\ped{M})\\right)^{2}\\diffd{\\phi}\\right)\n",
     "\\end{equation}\n",
     "\n",
     "where $\\average{B}(\\phi,\\nvector{x})$ is the magnetic profile calculated at position $\\phi$ when the remanence angles are represented by $\\nvector{x}$, and $\\average{B}\\ped{ramp} \\left(\\phi,B\\ped{l},B\\ped{h},F\\ped{M})\\right)$ is the ramp profile at angle $\\phi$, between plateaus $B\\ped{l}$ and $B\\ped{h}$ for the low and high field regions, with a high field fraction $F\\ped{M}$ (the fraction of the entire cycle where the field is at the high level)."
@@ -409,6 +409,9 @@
     "    target_args = (B_high,B_low,field_fraction)\n",
     "\n",
     "    alpha_B_rem_g = tmpd.get_optimal_remanence_angles(target_function,target_args)\n",
+    "    cost_function = tmpd.calculate_functional_target(alpha_B_rem_g,\n",
+    "                                                    target_function,\n",
+    "                                                    target_args)\n",
     "\n",
     "    # plot results   \n",
     "    plt.rc('font',size=FONTSIZE)\n",
@@ -438,7 +441,7 @@
     "\n",
     "    save_figure(profile_fig_g,\"profile_optimized_B_%d_FM_%d\" %(B_high*1000,field_fraction*100))\n",
     "    \n",
-    "    return alpha_B_rem_g\n",
+    "    return alpha_B_rem_g,cost_function\n",
     "    "
    ]
   },
@@ -521,8 +524,11 @@
     "B_high = 1.275\n",
     "field_fraction = 0.45\n",
     "\n",
-    "alpha_B_rem_g_1 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_1)\n",
-    "print(alpha_B_rem_g_1)"
+    "alpha_B_rem_g_1, K_1 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_1)\n",
+    "print(\"Optimal angles:\")\n",
+    "print(alpha_B_rem_g_1)\n",
+    "print(\"Value of the objective function:\")\n",
+    "print(K_1)"
    ]
   },
   {
@@ -604,8 +610,11 @@
     "B_high = 1.300\n",
     "field_fraction = 0.35\n",
     "\n",
-    "alpha_B_rem_g_2 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_2)\n",
-    "print(alpha_B_rem_g_2)"
+    "alpha_B_rem_g_2, K_2 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_2)\n",
+    "print(\"Optimal angles:\")\n",
+    "print(alpha_B_rem_g_2)\n",
+    "print(\"Value of the objective function:\")\n",
+    "print(K_2)"
    ]
   },
   {
@@ -694,8 +703,11 @@
     "B_high = 1.400\n",
     "field_fraction = 0.25\n",
     "\n",
-    "alpha_B_rem_g_3 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_3)\n",
-    "print(alpha_B_rem_g_3)"
+    "alpha_B_rem_g_3, K_3 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_3)\n",
+    "print(\"Optimal angles:\")\n",
+    "print(alpha_B_rem_g_3)\n",
+    "print(\"Value of the objective function:\")\n",
+    "print(K_3)"
    ]
   },
   {
