Re-organized the Optimization notebook to separate tasks of calculating and plotting

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -63,17 +65,7 @@
     "from scipy.optimize import minimize, differential_evolution, basinhopping\n",
     "from pandas import Series, DataFrame\n",
     "import teslamax\n",
-    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign, TeslaMaxModel\n",
-    "\n",
-    "\n",
-    "\n",
-    "mpl_params = {'text.usetex': True,\n",
-    "              'font.family': 'serif',\n",
-    "              'font.serif': 'Computer Modern',\n",
-    "              'text.latex.preamble': [r'\\usepackage{engsymbols}',\n",
-    "                                      r'\\usepackage{magref}',\n",
-    "                                      r'\\usepackage{siunitx}']}\n",
-    "matplotlib.rcParams.update(mpl_params)"
+    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign, TeslaMaxModel"
    ]
   },
   {
@@ -89,7 +81,7 @@
     "\n",
     "FONTSIZE = 20\n",
     "\n",
-    "\n",
+    "B_HIGH_LIMIT = 1.5\n",
     "\n",
     "PAPER_FILE_PATH = Path('.')\n",
     "FIGURES_DIR_NAME = \"figures\"\n",
@@ -98,7 +90,7 @@
     "\n",
     "PLOT_EXTENSION = \".png\"\n",
     "\n",
-    "DPI = 800"
+    "DPI = 1000"
    ]
   },
   {
@@ -116,6 +108,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -171,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -253,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -321,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -391,13 +392,16 @@
    },
    "outputs": [],
    "source": [
-    "def optimize_and_plot_ramp(B_high,field_fraction,params):\n",
+    "def optimize_ramp(B_high,field_fraction,params):\n",
     "    \"\"\"\n",
     "    Run the TeslaMax optimization procedure, trying to match the profile\n",
     "    to a ramp profile between 0 and 'B_high' with 'field_fraction', using the\n",
     "    parameters in the dictionary 'params'.\n",
     "    \n",
-    "    Plot and save the figures, and return the vector of optimal remanence directions\n",
+    "    Return a TeslaMaxModel object, representing the optimized magnet,\n",
+    "    and the value of the cost function. The TeslaMaxModel object is already populated with simulation results.\n",
+    "    \n",
+    "    The simulation results are stored in directories inside \"teslamax-play\".\n",
     "    \"\"\"\n",
     "    \n",
     "    tmpd = TeslaMaxPreDesign(params)\n",
@@ -412,37 +416,65 @@
     "    cost_function = tmpd.calculate_functional_target(alpha_B_rem_g,\n",
     "                                                    target_function,\n",
     "                                                    target_args)\n",
-    "\n",
-    "    # plot results   \n",
-    "    plt.rc('font',size=FONTSIZE)\n",
-    "\n",
-    "    profile_fig_g = plt.figure(figsize=(FIGSIZE_INCHES,FIGSIZE_INCHES))\n",
-    "    profile_axes_g = profile_fig_g.add_subplot(111)\n",
     "    \n",
-    "    teslamax_playground = str(Path.home() / \"code\" / \"TeslaMax\" / \"teslamax-play\" )\n",
+    "    sdir = \"ramp_Bh_%d_FM_%d\" %(B_high*1e3, field_fraction*1e2) \n",
+    "    \n",
+    "    teslamax_playground = str(Path.home() / \"code\" / \"TeslaMax\" / \"teslamax-play\" / sdir )\n",
     "    \n",
     "    tmm_g = TeslaMaxModel(tmpd,\n",
     "                          alpha_B_rem_g,\n",
     "                          path=teslamax_playground)\n",
-    "    tmm_g.run()\n",
+    "    \n",
+    "    return (tmm_g,cost_function)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import nemplot\n",
+    "from nemplot import nemplot_parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_optimized_ramp(tmm,B_high,field_fraction):\n",
+    "    \"\"\"\n",
+    "    Plot a comparison between the magnetic profile from the TeslaMaxModel object 'tmm'\n",
+    "    and a ramp profile between 0 and 'B_high', with 'field_fraction'.\n",
+    "    \n",
+    "    Save the figure with the appropriate naming inside the 'figures' directory\n",
+    "    \"\"\"\n",
+    " \n",
+    "\n",
+    "    profile_fig_g, profile_axes_g = nemplot.create_plot(xlabel=r'$\\phi [\\si{\\degree}]$',\n",
+    "                                                       ylabel=r'$B [\\si{\\tesla}]$')\n",
+    "    \n",
     "    phi_vector_g, B_vector_g = tmm_g.get_profile_data().T\n",
     "    \n",
     "    profile_axes_g.plot(phi_vector_g,B_vector_g)\n",
     "    profile_axes_g.set_xlim(0,np.max(phi_vector_g))\n",
     "    profile_axes_g.set_xticks(np.linspace(0,np.max(phi_vector_g),9))\n",
     "    profile_axes_g.xaxis.grid(True)\n",
-    "    profile_axes_g.set_ylim(0,B_high+0.1)\n",
-    "    profile_axes_g.set_yticks(np.arange(0,B_high+0.2,0.2))\n",
-    "    profile_axes_g.set_xlabel(r'$\\phi [\\si{\\degree}]$')\n",
-    "    profile_axes_g.set_ylabel(r'$B [\\si{\\tesla}]$')\n",
+    "    profile_axes_g.set_ylim(0,B_HIGH_LIMIT)\n",
+    "    profile_axes_g.set_yticks(np.arange(0,B_HIGH_LIMIT+0.2,0.2))\n",
     "    \n",
+    "    B_low = 0.0\n",
     "    B_inst_vector = teslamax.calculate_ramp_profile(phi_vector_g,B_high,B_low,field_fraction)\n",
     "    profile_axes_g.plot(phi_vector_g,B_inst_vector,'--')\n",
     "\n",
-    "    save_figure(profile_fig_g,\"profile_optimized_B_%d_FM_%d\" %(B_high*1000,field_fraction*100))\n",
-    "    \n",
-    "    return alpha_B_rem_g,cost_function\n",
-    "    "
+    "    nemplot.save_figure(profile_fig_g,\"profile_optimized_B_%d_FM_%d\" %(B_high*1000,field_fraction*100))"
    ]
   },
   {
@@ -495,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -522,16 +556,27 @@
    ],
    "source": [
     "%%time\n",
-    "%matplotlib inline\n",
     "\n",
     "B_high = 1.275\n",
     "field_fraction = 0.45\n",
     "\n",
-    "alpha_B_rem_g_1, K_1 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_1)\n",
-    "print(\"Optimal angles:\")\n",
-    "print(alpha_B_rem_g_1)\n",
+    "tmm_g_1, K_1 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_1)\n",
+    "\n",
     "print(\"Value of the objective function:\")\n",
     "print(K_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "plot_optimized_ramp(tmm_g_1,B_high,field_fraction)"
    ]
   },
   {
@@ -584,7 +629,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -611,16 +658,27 @@
    ],
    "source": [
     "%%time\n",
-    "%matplotlib inline\n",
     "\n",
     "B_high = 1.300\n",
     "field_fraction = 0.35\n",
     "\n",
-    "alpha_B_rem_g_2, K_2 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_2)\n",
-    "print(\"Optimal angles:\")\n",
-    "print(alpha_B_rem_g_2)\n",
+    "tmm_g_2, K_2 = optimize_ramp(B_high,field_fraction,params_optimization_2)\n",
+    "\n",
     "print(\"Value of the objective function:\")\n",
     "print(K_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "plot_optimized_ramp(tmm_g_2,B_high,field_fraction)"
    ]
   },
   {
@@ -680,7 +738,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -707,16 +768,28 @@
    ],
    "source": [
     "%%time\n",
-    "%matplotlib inline\n",
+    "\n",
     "\n",
     "B_high = 1.400\n",
     "field_fraction = 0.25\n",
     "\n",
-    "alpha_B_rem_g_3, K_3 = optimize_and_plot_ramp(B_high,field_fraction,params_optimization_3)\n",
-    "print(\"Optimal angles:\")\n",
-    "print(alpha_B_rem_g_3)\n",
+    "tmm_g_3, K_3 = optimize_ramp(B_high,field_fraction,params_optimization_3)\n",
+    "\n",
     "print(\"Value of the objective function:\")\n",
     "print(K_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "plot_optimized_ramp(tmm_g_3,B_high,field_fraction)"
    ]
   }
  ],
@@ -737,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
