Modified processing functions to always use the first quadrant of the air gap as basis for calculating everything else

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "B_HIGH_LIMIT = 1.5\n",
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -506,8 +508,8 @@
      "output_type": "stream",
      "text": [
       "Value of the objective function:\n",
-      "nan\n",
-      "Wall time: 15min 43s\n"
+      "0.571807601366\n",
+      "Wall time: 13min 57s\n"
      ]
     }
    ],
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -593,17 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database is locked',)).History will not be written to the database.\n",
       "Value of the objective function:\n",
-      "0.178743040676\n",
-      "Wall time: 18min 5s\n"
+      "0.186199768016\n",
+      "Wall time: 14min 34s\n"
      ]
     }
    ],
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -709,8 +710,8 @@
      "output_type": "stream",
      "text": [
       "Value of the objective function:\n",
-      "0.49741963932\n",
-      "Wall time: 21min 3s\n"
+      "0.452238306883\n",
+      "Wall time: 16min 8s\n"
      ]
     }
    ],
