Re-ran results with smaller R_e and the new model

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +469,7 @@
     "                \"h_gap\": FIXED_PARAMETERS_AMR[\"hgap[m]\"],\n",
     "                \"R_s\": 0.150,\n",
     "                \"h_fc\": 0.010,\n",
-    "                \"R_e\": 2,\n",
+    "                \"R_e\": 0.3,\n",
     "                \"n_IV\": 4,\n",
     "                \"phi_S_IV\": 45,\n",
     "                \"n_II\": 3,\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -508,8 +508,8 @@
      "output_type": "stream",
      "text": [
       "Value of the objective function:\n",
-      "0.571807601366\n",
-      "Wall time: 13min 57s\n"
+      "0.573842477018\n",
+      "Wall time: 14min 49s\n"
      ]
     }
    ],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -564,7 +564,7 @@
     "                \"h_gap\": FIXED_PARAMETERS_AMR[\"hgap[m]\"],\n",
     "                \"R_s\": 0.150,\n",
     "                \"h_fc\": 0.010,\n",
-    "                \"R_e\": 2,\n",
+    "                \"R_e\": 0.3,\n",
     "                \"n_IV\": 4,\n",
     "                \"phi_S_IV\": 45,\n",
     "                \"n_II\": 3,\n",
@@ -595,16 +595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The history saving thread hit an unexpected error (OperationalError('database is locked',)).History will not be written to the database.\n",
       "Value of the objective function:\n",
-      "0.186199768016\n",
-      "Wall time: 14min 34s\n"
+      "0.18827332058\n",
+      "Wall time: 14min 55s\n"
      ]
     }
    ],
