Organized maps notebook to separate the tasks of creating and updating the results file

--- a/TeslaMax Maps.ipynb
+++ b/TeslaMax Maps.ipynb
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -26,7 +28,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {
       "image/png": {
        "width": 500
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,14 +67,12 @@
     "from pandas import Series, DataFrame\n",
     "\n",
     "import teslamax\n",
-    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign, TeslaMaxModel\n",
-    "import nemplot\n",
-    "from nemplot import nemplot_parameters"
+    "from teslamax import TeslaMaxGeometry, TeslaMaxPreDesign, TeslaMaxModel\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -91,16 +91,27 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\fapfor\\\\code\\\\TeslaMax'"
+       "'M:\\\\code\\\\TeslaMax'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "COLUMNS_NAMES_STR = 'R_s[mm]\\t\\phi_S[deg]\\tK[T^2]\\n'\n"
    ]
   },
   {
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +193,7 @@
     "                \"R_o\": 0.060,\n",
     "                \"h_gap\": 0.025,\n",
     "                \"h_fc\": 0.010,\n",
-    "                \"R_e\": 2,\n",
+    "                \"R_e\": 0.3,\n",
     "                \"n_IV\": 4,\n",
     "                \"n_II\": 3,\n",
     "                \"phi_C_II\": 15,\n",
@@ -207,46 +218,31 @@
     "field_fraction = 0.35\n",
     "\n",
     "\n",
-    "params_header_str = str(params_optimization_ref).replace(',',',\\n') + '\\n\\n'\n"
+    "\n",
+    "map_file_path = Path(\"map_Rs_phiS_B_%d_FM_%d.txt\" %(B_high*1000, field_fraction*100))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Generate the results file\n",
+    "\n",
     "To avoid having to run the notebook many times, we write the results to a file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "436"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "map_file_path = Path(\"map_Rs_phiS_B_%d_FM_%d.txt\" %(B_high*1000, field_fraction*100))\n",
-    "map_file_path.write_text(params_header_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_names_str = 'R_s[mm]\\t\\phi_S[deg]\\tK[T^2]\\n'\n",
+    "params_header_str = str(params_optimization_ref).replace(',',',\\n') + '\\n\\n'\n",
+    "\n",
+    "map_file_path.write_text(params_header_str)\n",
+    "\n",
     "with map_file_path.open(mode='a') as f:\n",
-    "    f.write(columns_names_str)"
+    "    f.write(COLUMNS_NAMES_STR)"
    ]
   },
   {
@@ -258,20 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "R_s_values = [150e-3,]\n",
+    "R_s_values = [120,130,140,150e-3,]\n",
     "\n",
-    "phi_S_values = [45,]"
+    "phi_S_values = [35,45,55]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Update the results file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
