Clarified documentation of the Rs maps

--- a/Choosing the best ramp profile.ipynb
+++ b/Choosing the best ramp profile.ipynb
@@ -289,6 +289,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the inner magnet radius of 40 mm:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -317,6 +324,13 @@
     "R_s_contour = ax.contourf(F_M,B_max,R_s,cmap='jet')\n",
     "R_s_colorbar = fig.colorbar(R_s_contour,ax=ax)\n",
     "R_s_colorbar.set_label(r'$R\\ped{s}\\,[\\si{\\mm}]$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And for 50 mm:"
    ]
   },
   {
