--- a/Choosing the best ramp profile.ipynb
+++ b/Choosing the best ramp profile.ipynb
@@ -580,13 +580,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The critical value of the cost function is $K \\le 0.0015$. See the **TeslaMax Optimization** notebook for examples."
+   ]
   }
  ],
  "metadata": {
