Updated K maps with new calculation of profile - still not complete, though

--- a/Choosing the best ramp profile.ipynb
+++ b/Choosing the best ramp profile.ipynb
@@ -585,8 +585,17 @@
     "collapsed": true
    },
    "source": [
-    "The critical value of the cost function is $K \\le 0.0015$. See the **TeslaMax Optimization** notebook for examples."
+    "The critical value of the cost function is $K \\le 0.002$. See the **TeslaMax Optimization** notebook for examples."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
