--- a/Comparison with and without internal magnet.ipynb
+++ b/Comparison with and without internal magnet.ipynb
@@ -468,6 +468,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmm_magnet.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
