Created maps of files for large magnets, and tested some combinations in the Optimization notebook

--- a/Comparison with and without internal magnet.ipynb
+++ b/Comparison with and without internal magnet.ipynb
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "B_HIGH_LIMIT = 1.2B_HIGH_LIMIT = 1.2\n",
+    "B_HIGH_LIMIT = 1.2\n",
     "\n",
     "FIELD_FRACTION = 0.35\n",
     "\n",
