Calculated dimensions of the estimated magnet

--- a/Energetic efficiency of magnetic systems.ipynb
+++ b/Energetic efficiency of magnetic systems.ipynb
@@ -693,13 +693,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's calculate the overall dimensions a large magnet would have for a sample cooling capacity.\n",
+    "\n",
+    "Using only the external magnet, the volume is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{V}_{\\mathrm{PMM}} = 2 \\phi_{\\mathrm{S,IV}} \\left(R_\\mathrm{s}^2 - R_\\mathrm{g}\\right)^2 L\n",
+    "$$\n",
+    "\n",
+    "and hence, for a given volume, the external radius is given by:\n",
+    "\n",
+    "$$\n",
+    "R_\\mathrm{s} = \\left(R_\\mathrm{g}^2 + \\frac{\\mathcal{V}_{\\mathrm{PMM}}}{ 2 \\phi_{\\mathrm{S,IV}}L}\\right)^{\\frac{1}{2}}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For a capacity of 12000 BTU/h:\n",
+      "\n",
+      "R_o = 163.6 mm\n",
+      "R_g = 196.6 mm\n",
+      "h_gap = 33.0 mm\n",
+      "R_s = 269.8 mm\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q_c = 12000\n",
+    "\n",
+    "table = filter_table_from_column(magnet_volume_table,\"Q_c[BTU/h]\",Q_c)\n",
+    "R_o = 1e-3*table[\"R_o[mm]\"].values[0]\n",
+    "V_PMM = 1e-3*table[\"V_PMM[L]\"].values[0]\n",
+    "\n",
+    "h_gap = FIXED_PARAMETERS_LARGE_MAGNET[\"h_gap\"]\n",
+    "\n",
+    "R_g = R_o + h_gap\n",
+    "\n",
+    "phi_S_IV = np.deg2rad(FIXED_PARAMETERS_LARGE_MAGNET[\"phi_S_IV\"])\n",
+    "L = FIXED_PARAMETERS_LARGE_MAGNET[\"L\"]\n",
+    "\n",
+    "R_s = np.sqrt(R_g**2 + (V_PMM)/(2*phi_S_IV*L))\n",
+    "\n",
+    "print(\"For a capacity of %d BTU/h:\" %(Q_c,))\n",
+    "print()\n",
+    "print(\"R_o = %.1f mm\" %(R_o*1e3,))\n",
+    "print(\"R_g = %.1f mm\" %(R_g*1e3,))\n",
+    "print(\"h_gap = %.1f mm\" %(h_gap*1e3,))\n",
+    "print(\"R_s = %.1f mm\" %(R_s*1e3,))"
+   ]
   }
  ],
  "metadata": {
