Re-organized notebooks and fixed AMR parameters used as reference

--- a/Volumetric efficiency of magnetic systems and application to higher capacities.ipynb
+++ b/Volumetric efficiency of magnetic systems and application to higher capacities.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Energetic efficiency of magnetic systems"
+    "# Volumetric efficiency of magnet systems and application to higher capacities"
    ]
   },
   {
